# test-bexup

./: .gitignore  README.md  docker-compose.yml  dockerfile  insomnia.json  pyproject.toml
api1/: main.py
api1/database/: mongo_database.py
api1/messaging/: publisher.py
api1/middlewares/: http_middleware.py
api1/models/: brand_models.py
api1/repository/: fipe_repository.py
api1/services/: fipe_service.py
api2/: main.py
api2/config/: aws_config.py  config.py
api2/database/: mongo_database.py
api2/messaging/: subscriber.py
api2/middlewares/: http_middleware.py
api2/models/: models.py
api2/repository/: aws_repository.py  fipe_repository.py
api2/services/: base_config.py  fipe_service.py
