[tool.poetry]
name = "Microservices"
version = "0.1.0"
description = ""
authors = ["Edenilson Ferreira"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
requests = "^2.29.0"
uvicorn = "^0.22.0"
boto3 = "^1.26.122"
isort = "^5.12.0"
pika = "^1.3.1"
pymongo = "^4.3.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
